<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BD8BD"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="#8BD8BD"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSignUp_back"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_back">

        </Button>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/logo_goodminton">

        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bg_view"
        android:orientation="vertical">


        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/textView_Register"
            android:textColor="@color/white"
            android:textSize="30sp">

        </TextView>

        <!--        <EditText-->
        <!--            android:id="@+id/edt_nameAccount"-->
        <!--            android:layout_width="350dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:layout_marginTop="50dp"-->
        <!--            android:layout_marginBottom="20dp"-->
        <!--            android:background="@drawable/input"-->
        <!--            android:hint="@string/input_account"-->
        <!--            android:paddingLeft="20dp"-->
        <!--            android:textSize="30sp" />-->

        <!--        <EditText-->
        <!--            android:id="@+id/edt_passWord"-->
        <!--            android:layout_width="350dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:layout_margin="20dp"-->
        <!--            android:layout_marginTop="50dp"-->
        <!--            android:background="@drawable/input"-->
        <!--            android:hint="@string/input_password"-->
        <!--            android:paddingLeft="20dp"-->
        <!--            android:textSize="30sp"/>-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/input_nameAccount">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSignUp_nameAccount"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@drawable/input"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/input_email">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSignUp_email"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@drawable/input"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/input_phoneNumber"
            app:endIconDrawable="@drawable/phoneontact">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSignUp_phoneNumber"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@drawable/input"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/input_password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSignUp_password"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@drawable/input"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radioGroupPermissions">

                <RadioButton
                    android:id="@+id/radioButtonSignUp_admin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="Admin"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radioButtonSignUp_staff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_view"
                    android:text="Staff"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radioButtonSignUp_customer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/bg_view"
                    android:text="Customer"
                    android:textColor="@color/white" />

            </RadioGroup>
        </LinearLayout>


        <Button
            android:id="@+id/btnSignUp_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="#8BD8BD"
            android:text="Sign Up"
            android:textSize="25sp">

        </Button>


    </LinearLayout>


</LinearLayout>


