<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BD8BD"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="#8BD8BD"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/background">

        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bg_view"
        android:orientation="vertical">


        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/textView_login"
            android:textColor="@color/white"
            android:textSize="30sp">

        </TextView>

        <!--        <EditText-->
        <!--            android:id="@+id/edt_nameAccount"-->
        <!--            android:layout_width="350dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:layout_marginTop="50dp"-->
        <!--            android:layout_marginBottom="20dp"-->
        <!--            android:background="@drawable/input"-->
        <!--            android:hint="@string/input_account"-->
        <!--            android:paddingLeft="20dp"-->
        <!--            android:textSize="30sp" />-->

        <!--        <EditText-->
        <!--            android:id="@+id/edt_passWord"-->
        <!--            android:layout_width="350dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:layout_margin="20dp"-->
        <!--            android:layout_marginTop="50dp"-->
        <!--            android:background="@drawable/input"-->
        <!--            android:hint="@string/input_password"-->
        <!--            android:paddingLeft="20dp"-->
        <!--            android:textSize="30sp"/>-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/input_account">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@drawable/input"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/input_password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@drawable/input"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/textView_forgotPassword"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="#8BD8BD"
            android:text="Login"
            android:textSize="25sp">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/textView_LoginWith"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">



            <View android:layout_width="140dp"
                android:layout_height="match_parent">  </View>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icongoole"
                android:layout_weight="1"  />
            <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icgit"
            android:layout_weight="1"  />
            <View android:layout_width="140dp"
                android:layout_height="match_parent">  </View>
        </LinearLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tạo tài khoản mới"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_gravity="center">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tạo branch test">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tạo branch test">
        </TextView>

    </LinearLayout>


</LinearLayout>


